--- a/WebContent/erroresgastos.xhtml
+++ b/WebContent/erroresgastos.xhtml
@@ -99,26 +99,33 @@
 									<h:panelGrid columns="2" cellpadding="5">
 
 										<p:panel>
-											<h:panelGrid columns="3" cellpadding="5">
+											<h:panelGrid columns="2" cellpadding="3">
 
-												<h:outputText for="COACES" value="Código de activo: "/>
-												<p:inputText id="COACES" value="#{GestorErroresGastos.sCOACES}" size="9" maxlength="9" disabled="#{GestorErroresGastos.bCOACES}"/>
+												<p:panel>
+													<h:panelGrid columns="3" cellpadding="3">
 
-												<p:commandButton value="Cargar Datos" update="msgs, popup, COACES, NUPROF, form:gastos" actionListener="#{GestorErroresGastos.cargarDatos}" oncomplete="dlgTablaPendientes.show()" disabled="#{GestorErroresGastos.bCOACES}"/>
+														<h:outputText for="COACES" value="Activo: "/>
+														<p:inputText id="COACES" value="#{GestorErroresGastos.sCOACES}" size="9" maxlength="9" disabled="#{GestorErroresGastos.bCOACES}"/>
+
+														<p:commandButton value="Cargar Datos" update="msgs, popup, COACES, NUPROF, form:gastos" actionListener="#{GestorErroresGastos.cargarDatos}" oncomplete="dlgTablaPendientes.show()" disabled="#{GestorErroresGastos.bCOACES}"/>
+
+													</h:panelGrid>
+												</p:panel>
+
+												<p:commandButton value="Buscar un Activo" update="COACES, form:activos" oncomplete="dlgBuscar.show()" disabled="#{GestorErroresGastos.bCOACES}"/>
 
 											</h:panelGrid>
 										</p:panel>
 
-										<p:commandButton value="Buscar un Activo" update="COACES, form:activos" oncomplete="dlgBuscar.show()" disabled="#{GestorErroresGastos.bCOACES}"/>
+										<p:panel>
+											<h:panelGrid columns="2" cellpadding="5">
 
-						<p:panel>
-							<h:panelGrid columns="2" cellpadding="5">
+												<h:outputText value="Provisión: "/>
+												<p:inputText id="NUPROF" value="#{GestorErroresGastos.sNUPROF}" disabled="true" size="9" maxlength="9"/>
 
-								<h:outputText value="Provisión: "/>
-								<p:inputText id="NUPROF" value="#{GestorErroresGastos.sNUPROF}" disabled="true" size="9" maxlength="9"/>
+											</h:panelGrid>
+										</p:panel>
 
-							</h:panelGrid>
-						</p:panel>
 									</h:panelGrid>
 								</p:fieldset>
 
