--- a/WebContent/pagoconexion.xhtml
+++ b/WebContent/pagoconexion.xhtml
@@ -28,14 +28,6 @@
 								<p:commandButton type="button" value="Salir" onclick="dlgConfirmaSalir.show()"/> 
 							</h:panelGrid>
 						</p:fieldset>
-						<p:panel>
-							<h:panelGrid columns="2" cellpadding="5">
-
-								<h:outputText value="Número de provision de fondos: "/>
-								<p:inputText id="NUPROF" value="#{GestorPagosConexion.sNUPROF}" disabled="true" size="9" maxlength="9"/>
-
-							</h:panelGrid>
-						</p:panel>
 
 						<p:fieldset legend="Acciones">
 							<h:panelGrid columns="3" cellpadding="5">
@@ -78,20 +70,35 @@
 							<h:panelGrid columns="1" cellpadding="5">
 
 								<p:fieldset legend="Activo">
-									<h:panelGrid columns="2" cellpadding="5">
+									<h:panelGrid columns="3" cellpadding="5">
 
 										<p:panel>
-											<h:panelGrid columns="3" cellpadding="5">
+											<h:panelGrid columns="3" cellpadding="3">
 
-												<h:outputText for="COACES" value="Código de activo: "/>
-												<p:inputText id="COACES" value="#{GestorPagosConexion.sCOACES}" size="9" maxlength="9"/>
+												<p:panel>
+													<h:panelGrid columns="3" cellpadding="3">
 
-												<p:commandButton value="Cargar Datos" update="msgs, popup, COACES, NUPROF, form:gastos" actionListener="#{GestorPagosConexion.cargarDatos}" oncomplete="dlgTablaPendientes.show()"/>
+														<h:outputText for="COACES" value="Activo: "/>
+														<p:inputText id="COACES" value="#{GestorPagosConexion.sCOACES}" size="9" maxlength="9"/>
+
+														<p:commandButton value="Comprobar" update="msgs, popup, COACES, NUPROF, form:gastos" actionListener="#{GestorPagosConexion.cargarDatos}" oncomplete="dlgTablaPendientes.show()"/>
+
+													</h:panelGrid>
+												</p:panel>
+
+												<p:commandButton value="Buscar un Activo" update="COACES, form:activos" oncomplete="dlgBuscar.show()"/>
 
 											</h:panelGrid>
 										</p:panel>
 
-										<p:commandButton value="Buscar un Activo" update="COACES, form:activos" oncomplete="dlgBuscar.show()"/>
+										<p:panel>
+											<h:panelGrid columns="2" cellpadding="5">
+
+												<h:outputText value="Provisión: "/>
+												<p:inputText id="NUPROF" value="#{GestorPagosConexion.sNUPROF}" disabled="true" size="9" maxlength="9"/>
+
+											</h:panelGrid>
+										</p:panel>
 
 									</h:panelGrid>
 								</p:fieldset>
