Lista Gastos y carga de detalles

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -11,6 +11,8 @@
 						</p:submenu>
 
 						<p:submenu label="Gastos" async="true">
+							<p:menuitem value="Lista de Gastos" 
+								url="listagastos.xhtml" icon="ui-icon-search" />
 							<p:menuitem value="Registrar" 
 								url="registragasto.xhtml" icon="ui-icon-arrowthick-1-e" />
 							<p:menuitem value="Movimientos"
