--- a/WebContent/detallesactivo.xhtml
+++ b/WebContent/detallesactivo.xhtml
@@ -51,16 +51,16 @@
 										<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText for="NUINMU" value="Ficha de inmovilizado: " />
-											<p:inputText id="NUINMU" value="#{GestorDetallesActivo.sNUINMU}" size="9" maxlength="9" disabled="true"/>
+											<p:inputText id="NUINMU" value="#{GestorDetallesActivo.sNUINMU}" size="10" maxlength="10" disabled="true"/>
 
 											<h:outputText for="COSOPA" value="Sociedad Patrimonial: " />
-											<p:inputText id="COSOPA" value="#{GestorDetallesActivo.sCOSOPA}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="COSOPA" value="#{GestorDetallesActivo.sCOSOPA}" size="33" maxlength="33" disabled="true"/>
 
 											<h:outputText for="COENAE" value="Origen del activo: " />
-											<p:inputText id="COENAE" value="#{GestorDetallesActivo.sCOENAE}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="COENAE" value="#{GestorDetallesActivo.sCOENAE}" size="33" maxlength="33" disabled="true"/>
 
 											<h:outputText for="COESEN" value="Estado de entrada: " />
-											<p:inputText id="COESEN" value="#{GestorDetallesActivo.sCOESEN}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="COESEN" value="#{GestorDetallesActivo.sCOESEN}" size="33" maxlength="33" disabled="true"/>
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -72,7 +72,7 @@
 												<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText for="NOVIAS" value="Nombre de la Vía: " />
-											<p:inputText id="NOVIAS" value="#{GestorDetallesActivo.sNOVIAS}" size="60" maxlength="60" disabled="true"/>
+											<p:inputText id="NOVIAS" value="#{GestorDetallesActivo.sNOVIAS}" size="66" maxlength="66" disabled="true"/>
 
 												</h:panelGrid>
 											</p:panel>
@@ -125,46 +125,56 @@
 									</p:fieldset>
 
 									<p:fieldset legend="Gestoría">
-										<h:panelGrid columns="4" cellpadding="5">
+										<h:panelGrid columns="1" cellpadding="5">
 
+											<p:panel>
+												<h:panelGrid columns="2" cellpadding="5">
+											<h:outputText for="COREAE" value="Gestoría: " />
+											<p:inputText id="COREAE" value="#{GestorDetallesActivo.sCOREAE}" size="33" maxlength="33" disabled="true"/>
+												</h:panelGrid>
+											</p:panel>
+
+											<p:panel>
+												<h:panelGrid columns="4" cellpadding="5">
 											<h:outputText for="FEREAP" value="fecha de recepción del auto: " />
-											<p:inputText id="FEREAP" value="#{GestorDetallesActivo.sFEREAP}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FEREAP" value="#{GestorDetallesActivo.sFEREAP}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FEINAU" value="Fecha de inscripción del título: " />
-											<p:inputText id="FEINAU" value="#{GestorDetallesActivo.sFEINAU}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FEINAU" value="#{GestorDetallesActivo.sFEINAU}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FESOPO" value="Fecha de solicitud de posesión: " />
-											<p:inputText id="FESOPO" value="#{GestorDetallesActivo.sFESOPO}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FESOPO" value="#{GestorDetallesActivo.sFESOPO}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FESEPO" value="Fecha señalada de posesión: " />
-											<p:inputText id="FESEPO" value="#{GestorDetallesActivo.sFESEPO}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FESEPO" value="#{GestorDetallesActivo.sFESEPO}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FEREPO" value="Fecha realizada posesión: " />
-											<p:inputText id="FEREPO" value="#{GestorDetallesActivo.sFEREPO}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FEREPO" value="#{GestorDetallesActivo.sFEREPO}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FEADAC" value="Fecha de adjudicación: " />
-											<p:inputText id="FEADAC" value="#{GestorDetallesActivo.sFEADAC}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FEADAC" value="#{GestorDetallesActivo.sFEADAC}" size="9" maxlength="9" disabled="true"/>
+												</h:panelGrid>
+											</p:panel>
 
-											<h:outputText for="COREAE" value="Gestoría: " />
-											<p:inputText id="COREAE" value="#{GestorDetallesActivo.sCOREAE}" size="5" maxlength="5" disabled="true"/>
+
 
 										</h:panelGrid>
 									</p:fieldset>
 
 									<p:fieldset legend="Datos SEDAS">
-										<h:panelGrid columns="4" cellpadding="5">
+										<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText for="CODIJU" value="Disponibilidad: " />
-											<p:inputText id="CODIJU" value="#{GestorDetallesActivo.sCODIJU}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="CODIJU" value="#{GestorDetallesActivo.sCODIJU}" size="66" maxlength="66" disabled="true"/>
 
 											<h:outputText for="COSJUP" value="Situación jurídica procesal: " />
-											<p:inputText id="COSJUP" value="#{GestorDetallesActivo.sCOSJUP}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="COSJUP" value="#{GestorDetallesActivo.sCOSJUP}" size="66" maxlength="66" disabled="true"/>
 
 											<h:outputText for="COSTLI" value="Situación jurídica de liquidación: " />
-											<p:inputText id="COSTLI" value="#{GestorDetallesActivo.sCOSTLI}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="COSTLI" value="#{GestorDetallesActivo.sCOSTLI}" size="66" maxlength="66" disabled="true"/>
 
 											<h:outputText for="COSCAR" value="Situación jurídica de las cargas: " />
-											<p:inputText id="COSCAR" value="#{GestorDetallesActivo.sCOSCAR}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="COSCAR" value="#{GestorDetallesActivo.sCOSCAR}" size="66" maxlength="66" disabled="true"/>
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -173,10 +183,10 @@
 										<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText for="COESVE" value="Estado de la venta: " />
-											<p:inputText id="COESVE" value="#{GestorDetallesActivo.sCOESVE}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="COESVE" value="#{GestorDetallesActivo.sCOESVE}" size="44" maxlength="44" disabled="true"/>
 
 											<h:outputText for="COTSIN" value="Subtipo de inmueble: " />
-											<p:inputText id="COTSIN" value="#{GestorDetallesActivo.sCOTSIN}" size="4" maxlength="4" disabled="true"/>
+											<p:inputText id="COTSIN" value="#{GestorDetallesActivo.sCOTSIN}" size="66" maxlength="66" disabled="true"/>
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -230,10 +240,10 @@
 										<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText for="COSOCU" value="Situación ocupacional: " />
-											<p:inputText id="COSOCU" value="#{GestorDetallesActivo.sCOSOCU}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="COSOCU" value="#{GestorDetallesActivo.sCOSOCU}" size="33" maxlength="33" disabled="true"/>
 
 											<h:outputText for="COXPRO" value="Régimen de protección: " />
-											<p:inputText id="COXPRO" value="#{GestorDetallesActivo.sCOXPRO}" size="5" maxlength="5" disabled="true"/>
+											<p:inputText id="COXPRO" value="#{GestorDetallesActivo.sCOXPRO}" size="33" maxlength="33" disabled="true"/>
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -242,16 +252,16 @@
 										<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText for="FESOLA" value="Fecha de solicitud de lanzamiento: " />
-											<p:inputText id="FESOLA" value="#{GestorDetallesActivo.sFESOLA}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FESOLA" value="#{GestorDetallesActivo.sFESOLA}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FESELA" value="Fecha señalada de lanzamiento: " />
-											<p:inputText id="FESELA" value="#{GestorDetallesActivo.sFESELA}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FESELA" value="#{GestorDetallesActivo.sFESELA}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FERELA" value="Fecha de realizado lanzamiento: " />
-											<p:inputText id="FERELA" value="#{GestorDetallesActivo.sFERELA}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FERELA" value="#{GestorDetallesActivo.sFERELA}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FERLLA" value="Fecha de recepción de llaves: " />
-											<p:inputText id="FERLLA" value="#{GestorDetallesActivo.sFERLLA}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FERLLA" value="#{GestorDetallesActivo.sFERLLA}" size="9" maxlength="9" disabled="true"/>
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -272,7 +282,7 @@
 											<p:inputText id="CASUTG" value="#{GestorDetallesActivo.sCASUTG}" size="11" maxlength="11" disabled="true"/>
 
 											<h:outputText for="BIARRE" value="Arrendado: " />
-											<p:inputText id="BIARRE" value="#{GestorDetallesActivo.sBIARRE}" size="1" maxlength="1" disabled="true"/>
+											<p:inputText id="BIARRE" value="#{GestorDetallesActivo.sBIARRE}" size="4" maxlength="4" disabled="true"/>
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -287,7 +297,7 @@
 											<p:inputText id="CABANO" value="#{GestorDetallesActivo.sCABANO}" size="4" maxlength="4" disabled="true"/>
 
 											<h:outputText for="BIGAPA" value="Garaje: " />
-											<p:inputText id="BIGAPA" value="#{GestorDetallesActivo.sBIGAPA}" size="1" maxlength="1" disabled="true"/>
+											<p:inputText id="BIGAPA" value="#{GestorDetallesActivo.sBIGAPA}" size="4" maxlength="4" disabled="true"/>
 
 											<h:outputText for="CAGAPA" value="Plazas de apacamiento: " />
 											<p:inputText id="CAGAPA" value="#{GestorDetallesActivo.sCAGAPA}" size="5" maxlength="5" disabled="true"/>
@@ -302,19 +312,19 @@
 										<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText for="BILIPO" value="Licencia de primera ocupación: " />
-											<p:inputText id="BILIPO" value="#{GestorDetallesActivo.sBILIPO}" size="1" maxlength="1" disabled="true"/>
+											<p:inputText id="BILIPO" value="#{GestorDetallesActivo.sBILIPO}" size="4" maxlength="4" disabled="true"/>
 
 											<h:outputText for="BILIAC" value="Licencia de actividad: " />
-											<p:inputText id="BILIAC" value="#{GestorDetallesActivo.sBILIAC}" size="1" maxlength="1" disabled="true"/>
+											<p:inputText id="BILIAC" value="#{GestorDetallesActivo.sBILIAC}" size="4" maxlength="4" disabled="true"/>
 
 											<h:outputText for="BILIUS" value="Licencia de uso: " />
-											<p:inputText id="BILIUS" value="#{GestorDetallesActivo.sBILIUS}" size="1" maxlength="1" disabled="true"/>
+											<p:inputText id="BILIUS" value="#{GestorDetallesActivo.sBILIUS}" size="4" maxlength="4" disabled="true"/>
 
 											<h:outputText for="BIBOIN" value="Boletín de industria: " />
-											<p:inputText id="BIBOIN" value="#{GestorDetallesActivo.sBIBOIN}" size="1" maxlength="1" disabled="true"/>
+											<p:inputText id="BIBOIN" value="#{GestorDetallesActivo.sBIBOIN}" size="4" maxlength="4" disabled="true"/>
 
 											<h:outputText for="BICEFI" value="Certificado de obra: " />
-											<p:inputText id="BICEFI" value="#{GestorDetallesActivo.sBICEFI}" size="1" maxlength="1" disabled="true"/>
+											<p:inputText id="BICEFI" value="#{GestorDetallesActivo.sBICEFI}" size="4" maxlength="4" disabled="true"/>
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -362,16 +372,16 @@
 											<p:inputText id="POPROP" value="#{GestorDetallesActivo.sPOPROP}" size="6" maxlength="6" disabled="true"/>
 
 											<h:outputText for="COGRAP" value="Grado de propiedad: " />
-											<p:inputText id="COGRAP" value="#{GestorDetallesActivo.sCOGRAP}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="COGRAP" value="#{GestorDetallesActivo.sCOGRAP}" size="33" maxlength="33" disabled="true"/>
 
 											<h:outputText for="FEPREG" value="Fecha de presentación en el registro: " />
-											<p:inputText id="FEPREG" value="#{GestorDetallesActivo.sFEPREG}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FEPREG" value="#{GestorDetallesActivo.sFEPREG}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FEPHAC" value="Fecha de presentación en hacienda: " />
-											<p:inputText id="FEPHAC" value="#{GestorDetallesActivo.sFEPHAC}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FEPHAC" value="#{GestorDetallesActivo.sFEPHAC}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FEFOAC" value="Fecha de formalización: " />
-											<p:inputText id="FEFOAC" value="#{GestorDetallesActivo.sFEFOAC}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FEFOAC" value="#{GestorDetallesActivo.sFEFOAC}" size="9" maxlength="9" disabled="true"/>
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -380,7 +390,7 @@
 										<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText for="FEVACT" value="Fecha de venta: " />
-											<p:inputText id="FEVACT" value="#{GestorDetallesActivo.sFEVACT}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FEVACT" value="#{GestorDetallesActivo.sFEVACT}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="IMVACT" value="Precio de venta: " />
 											<p:inputText id="IMVACT" value="#{GestorDetallesActivo.sIMVACT}" size="15" maxlength="15" disabled="true"/>
@@ -395,16 +405,16 @@
 											<p:inputText id="NUFIPR" value="#{GestorDetallesActivo.sNUFIPR}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="COTPET" value="Tipo de petición: " />
-											<p:inputText id="COTPET" value="#{GestorDetallesActivo.sCOTPET}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="COTPET" value="#{GestorDetallesActivo.sCOTPET}" size="33" maxlength="33" disabled="true"/>
 
 											<h:outputText for="FEEMPT" value="Fecha de emisión de petición: " />
-											<p:inputText id="FEEMPT" value="#{GestorDetallesActivo.sFEEMPT}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FEEMPT" value="#{GestorDetallesActivo.sFEEMPT}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FESORC" value="Fecha de solicitud de referencia catrastral: " />
-											<p:inputText id="FESORC" value="#{GestorDetallesActivo.sFESORC}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FESORC" value="#{GestorDetallesActivo.sFESORC}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="FESODE" value="Fecha de solicitud de descalificación: " />
-											<p:inputText id="FESODE" value="#{GestorDetallesActivo.sFESODE}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FESODE" value="#{GestorDetallesActivo.sFESODE}" size="9" maxlength="9" disabled="true"/>
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -413,10 +423,10 @@
 										<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText for="FEREAC" value="Fecha de baja del activo: " />
-											<p:inputText id="FEREAC" value="#{GestorDetallesActivo.sFEREAC}" size="8" maxlength="8" disabled="true"/>
+											<p:inputText id="FEREAC" value="#{GestorDetallesActivo.sFEREAC}" size="9" maxlength="9" disabled="true"/>
 
 											<h:outputText for="COXSIA" value="Sitaución del auto: " />
-											<p:inputText id="COXSIA" value="#{GestorDetallesActivo.sCOXSIA}" size="2" maxlength="2" disabled="true"/>
+											<p:inputText id="COXSIA" value="#{GestorDetallesActivo.sCOXSIA}" size="33" maxlength="33" disabled="true"/>
 
 											<h:outputText for="NUJUZD" value="Númedo de juzgado: " />
 											<p:inputText id="NUJUZD" value="#{GestorDetallesActivo.sNUJUZD}" size="2" maxlength="2" disabled="true"/>
@@ -455,10 +465,10 @@
 											<p:inputText id="COENOR" value="#{GestorDetallesActivo.sCOENOR}" size="5" maxlength="5" disabled="true"/>
 
 											<h:outputText for="COSPAT" value="Sociedad patrimonial: " />
-											<p:inputText id="COSPAT" value="#{GestorDetallesActivo.sCOSPAT}" size="5" maxlength="5" disabled="true"/>
+											<p:inputText id="COSPAT" value="#{GestorDetallesActivo.sCOSPAT}" size="66" maxlength="66" disabled="true"/>
 
 											<h:outputText for="COSPAS" value="Sociedad propietaria antes de SAREB: " />
-											<p:inputText id="COSPAS" value="#{GestorDetallesActivo.sCOSPAS}" size="5" maxlength="5" disabled="true"/>
+											<p:inputText id="COSPAS" value="#{GestorDetallesActivo.sCOSPAS}" size="66" maxlength="66" disabled="true"/>
 
 											<h:outputText for="IDCOL3" value="Mediador: " />
 											<p:inputText id="IDCOL3" value="#{GestorDetallesActivo.sIDCOL3}" size="4" maxlength="4" disabled="true"/>
@@ -466,15 +476,24 @@
 										</h:panelGrid>
 									</p:fieldset>
 
-									<p:fieldset legend="Comunidad">
-										<h:panelGrid columns="5" cellpadding="5">
+									<p:fieldset legend="Obra">
+										<h:panelGrid columns="2" cellpadding="5">
 
-											<h:outputText for="BIOBNU" value="Obra nueva: " />
-											<p:inputText id="BIOBNU" value="#{GestorDetallesActivo.sBIOBNU}" size="1" maxlength="1" disabled="true"/>
+											<p:panel>
+												<h:panelGrid columns="2" cellpadding="5">
+													<h:outputText for="BIOBNU" value="Obra nueva: " />
+													<p:inputText id="BIOBNU" value="#{GestorDetallesActivo.sBIOBNU}" size="33" maxlength="33" disabled="true"/>
+												</h:panelGrid>
+											</p:panel>
 
-											<h:outputText for="POBRAR" value="Porcentaje de obra realizado: " />
-											<p:inputText id="POBRAR" value="#{GestorDetallesActivo.sPOBRAR}" size="6" maxlength="6" disabled="true"/>
-											<h:outputText for="POBRAR" value="%" />
+											<p:panel>
+												<h:panelGrid columns="3" cellpadding="5">
+													<h:outputText for="POBRAR" value="Porcentaje de obra realizado: " />
+													<p:inputText id="POBRAR" value="#{GestorDetallesActivo.sPOBRAR}" size="6" maxlength="6" disabled="true"/>
+													<h:outputText for="POBRAR" value="%" />
+												</h:panelGrid>
+											</p:panel>
+
 
 										</h:panelGrid>
 									</p:fieldset>
