--- a/WebContent/detallesgasto.xhtml
+++ b/WebContent/detallesgasto.xhtml
@@ -13,9 +13,9 @@
 		<h:form>
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="100" header="Gastos">
+				<p:layoutUnit position="north" size="auto" header="Gastos">
 						<p:fieldset legend="Sesión" id="sesion">
-							<h:panelGrid columns="1" cellpadding="1">
+							<h:panelGrid columns="2" cellpadding="1">
 								<p:panel>
 									<h:panelGrid columns="2" cellpadding="1">
 										<h:outputText value="Usuario: "/>
@@ -25,6 +25,12 @@
 								<p:commandButton type="button" value="Salir" onclick="dlgConfirmaSalir.show()"/> 
 							</h:panelGrid>
 						</p:fieldset>
+									<p:fieldset legend="Acciones">
+										<h:panelGrid columns="3" cellpadding="5">
+											<p:commandButton value="Volver" action="#{GestorDetallesGasto.volver}"/>
+										</h:panelGrid>
+											<p:messages id="msgs"/>
+									</p:fieldset>
 				</p:layoutUnit>
 
 				<p:layoutUnit position="west" size="20%" header="Menus">
@@ -39,26 +45,26 @@
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Identificador de activo especial: " />
-											<p:inputText id="COACES" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="9" maxlength="9"/>
+											<p:inputText id="COACES" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="9" maxlength="9"/>
 
 											<h:outputText value="Numero de provision de fondos: " />
-											<p:inputText id="NUPROF" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="9" maxlength="9"/>
+											<p:inputText id="NUPROF" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="9" maxlength="9"/>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Fecha de entrada en la aplicacion: " />
-											<p:inputText id="FEAPLI" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="8" maxlength="8"/>
+											<p:inputText id="FEAPLI" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="8" maxlength="8"/>
 
 											<h:outputText value="Codigo de aplicacion INFOCAM: " />
-											<p:inputText id="COAPII" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="3" maxlength="3"/>
+											<p:inputText id="COAPII" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="3" maxlength="3"/>
 
 											<h:outputText value="Codigo de subaplicacion INFOCAM: " />
-											<p:inputText id="COSPII" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="2" maxlength="2"/>
+											<p:inputText id="COSPII" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="2" maxlength="2"/>
 
 											<h:outputText
 												value="Numero de cliente para intercambio de ficheros: " />
-											<p:inputText id="NUCLII" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="13" maxlength="13"/>
+											<p:inputText id="NUCLII" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="13" maxlength="13"/>
 										</h:panelGrid>
 									</p:panel>
 
@@ -69,28 +75,28 @@
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Codigo de error: " />
-											<p:inputText id="COTERR" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="2" maxlength="2"/>
+											<p:inputText id="COTERR" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="2" maxlength="2"/>
 
 											<h:outputText value="Indicador de autorizacion: " />
-											<p:inputText id="BIAUTO" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="1" maxlength="1"/>
+											<p:inputText id="BIAUTO" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="1" maxlength="1"/>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Fecha de anulacion del gasto: " />
-											<p:inputText id="FEAGTO" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="8" maxlength="8"/>
+											<p:inputText id="FEAGTO" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="8" maxlength="8"/>
 
 											<h:outputText value="Motivo de no autorizacion: " />
-											<p:inputText id="COMONA" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="2" maxlength="2"/>
+											<p:inputText id="COMONA" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="2" maxlength="2"/>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Fecha de autorizacion del gasto: " />
-											<p:inputText id="FEAUFA" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="8" maxlength="8"/>
+											<p:inputText id="FEAUFA" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="8" maxlength="8"/>
 
 											<h:outputText value="Fecha del pago al proveedor: " />
-											<p:inputText id="FEPGPR" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="8" maxlength="8"/>
+											<p:inputText id="FEPGPR" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="8" maxlength="8"/>
 										</h:panelGrid>
 									</p:panel>
 								</h:panelGrid>
@@ -102,41 +108,41 @@
 											<h:outputText value="Grupo de gasto: " />
 											<p:selectOneMenu id="COGRUG" value="#{TestPF.ssn}">
 												<f:selectItem itemLabel="Grupo" itemValue="" />
-												<f:selectItems value="#{GestorImpuestosRecursos.sBIRESO}" />
+												<f:selectItems value="#{GestorDetallesGasto.sBIRESO}" />
 											</p:selectOneMenu>
 
 											<h:outputText value="Tipo de concepto de gasto:  " />
 											<p:selectOneMenu id="COTPGA" value="#{TestPF.ssn}">
 												<f:selectItem itemLabel="Tipo" itemValue="" />
-												<f:selectItems value="#{GestorImpuestosRecursos.sBIRESO}" />
+												<f:selectItems value="#{GestorDetallesGasto.sBIRESO}" />
 											</p:selectOneMenu>
 
 											<h:outputText value="Subtipo de gasto: " />
 											<p:selectOneMenu id="COSBGA" value="#{TestPF.ssn}">
 												<f:selectItem itemLabel="Subtipo" itemValue="" />
-												<f:selectItems value="#{GestorImpuestosRecursos.sBIRESO}" />
+												<f:selectItems value="#{GestorDetallesGasto.sBIRESO}" />
 											</p:selectOneMenu>
 
 											<h:outputText value="Periodicidad de pago: " />
 											<p:selectOneMenu id="PTPAGO" value="#{TestPF.ssn}">
 												<f:selectItem itemLabel="Periodicidad" itemValue="" />
-												<f:selectItems value="#{GestorImpuestosRecursos.sBIRESO}" />
+												<f:selectItems value="#{GestorDetallesGasto.sBIRESO}" />
 											</p:selectOneMenu>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Fecha del devengo: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
 
 											<h:outputText value="Fecha de fin de periodo: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
 
 											<h:outputText value="Fecha del pago: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
 
 											<h:outputText value="Fecha limite del pago: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
@@ -144,24 +150,24 @@
 											<h:outputText value="Situacion del gasto: " />
 											<p:selectOneMenu id="COSIGA" value="#{TestPF.ssn}">
 												<f:selectItem itemLabel="Situacion" itemValue="" />
-												<f:selectItems value="#{GestorImpuestosRecursos.sBIRESO}" />
+												<f:selectItems value="#{GestorDetallesGasto.sBIRESO}" />
 											</p:selectOneMenu>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Fecha de estado estimado del importe: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
 
 											<h:outputText value="Fecha de estado conocido del importe: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
 
 											<h:outputText
 												value="Fecha de estado autoriazado del importe: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
 
 											<h:outputText value="Fecha de estado pagado del importe: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="9999/99/99" size="5" maxlength="5"/>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
@@ -171,42 +177,42 @@
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
 
 											<h:outputText value="Recargo en el importe del gasto: " />
 											<h:outputText value="-" />
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
 
 											<h:outputText value="Importe de demora del gasto: " />
 											<h:outputText value="-" />
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
 
 											<h:outputText value="Importe de costas: " />
 											<h:outputText value="-" />
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
 
 											<h:outputText value="Importe de otros incrementos: " />
 											<h:outputText value="-" />
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
 
 											<h:outputText value="Importe de descuento de gastos: " />
 											<h:outputText value="-" />
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="999999.99" size="5" maxlength="5"/>
 
 										</h:panelGrid>
 									</p:panel>
@@ -214,21 +220,21 @@
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Codigo de unidad monetaria: " />
-											<p:inputText id="COUNMO" value="#{GestorImpuestosRecursos.sBIRESO}" disabled="true" size="5" maxlength="5"/>
+											<p:inputText id="COUNMO" value="#{GestorDetallesGasto.sBIRESO}" disabled="true" size="5" maxlength="5"/>
 
 											<h:outputText value="Importe de impuestos del gasto: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="99/99/9999" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="99/99/9999" size="5" maxlength="5"/>
 
 											<h:outputText value="Tipo de impuesto: " />
 											<p:selectOneMenu id="COIMPT" value="#{TestPF.ssn}">
 												<f:selectItem itemLabel="Tipo" itemValue="" />
-												<f:selectItems value="#{GestorImpuestosRecursos.sBIRESO}" />
+												<f:selectItems value="#{GestorDetallesGasto.sBIRESO}" />
 											</p:selectOneMenu>
 
 											<h:outputText value="Tipo de Negociado: " />
 											<p:selectOneMenu id="COTNEG" value="#{TestPF.ssn}">
 												<f:selectItem itemLabel="A cargo de..." itemValue="" />
-												<f:selectItems value="#{GestorImpuestosRecursos.sBIRESO}" />
+												<f:selectItems value="#{GestorDetallesGasto.sBIRESO}" />
 											</p:selectOneMenu>
 										</h:panelGrid>
 									</p:panel>
@@ -236,16 +242,16 @@
 									<p:fieldset legend="Conexion">
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Codigo de entidad: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="99/99/9999" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="99/99/9999" size="5" maxlength="5"/>
 
 											<h:outputText value="Oficina de emision: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="(999) 999-9999" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="(999) 999-9999" size="5" maxlength="5"/>
 
 											<h:outputText value="Numero de conexion: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="(999) 999-9999? x99999" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="(999) 999-9999? x99999" size="5" maxlength="5"/>
 
 											<h:outputText value="Fecha del pago por conexion: " />
-											<p:inputMask value="#{GestorImpuestosRecursos.sBIRESO}" mask="99/99/9999" size="5" maxlength="5"/>
+											<p:inputMask value="#{GestorDetallesGasto.sBIRESO}" mask="99/99/9999" size="5" maxlength="5"/>
 										</h:panelGrid>
 									</p:fieldset>
 
