--- a/WebContent/listaactivos.xhtml
+++ b/WebContent/listaactivos.xhtml
@@ -33,19 +33,19 @@
 
 
 											<h:outputText value="IDPROV: " />
-											<p:inputText id="IDPROV" value="#{GestorActivos.sIDPROV}" disabled="true" />
+											<p:inputText id="IDPROV" value="#{GestorListaActivos.sIDPROV}" disabled="true" />
 
 											<h:outputText value="COENGP: " />
-											<p:inputText id="COENGP" value="#{GestorActivos.sCOENGP}" disabled="true" />
+											<p:inputText id="COENGP" value="#{GestorListaActivos.sCOENGP}" disabled="true" />
 
 										</h:panelGrid>
 									</p:panel>
 
 									<p:fieldset legend="Acciones">
 										<h:panelGrid columns="3" cellpadding="5">
-													<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panelBuscar, activos" actionListener="#{GestorActivos.limpiarPlantilla}" />
-													<p:commandButton value="Buscar" update="msgs, popup, activos" actionListener="#{GestorActivos.buscaActivos}"/>
-													<p:commandButton value="Detalles" update="form:popup" action="#{GestorActivos.cargarDetalles}" />
+													<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panelBuscar, activos" actionListener="#{GestorListaActivos.limpiarPlantilla}" />
+													<p:commandButton value="Buscar" update="msgs, popup, activos" actionListener="#{GestorListaActivos.buscaActivos}"/>
+													<p:commandButton value="Detalles" update="form:popup" action="#{GestorListaActivos.cargarDetalles}" />
 										</h:panelGrid>
 									</p:fieldset>
 									<p:fieldset legend="Info">
@@ -77,37 +77,37 @@
 											<p:panel id="panelBuscar" >
 												<h:panelGrid columns="3" cellpadding="5">
 													<h:outputText for="NOPRAC" value="Provincia: " />
-														<p:inputText id="NOPRAC" value="#{GestorActivos.sNOPRAC}" size="18" maxlength="18">
+														<p:inputText id="NOPRAC" value="#{GestorListaActivos.sNOPRAC}" size="18" maxlength="18">
 														</p:inputText>
 													<p:message for="NOPRAC" display="icon"/>
 
 													<h:outputText for="NOMUIN" value="Municipio: " />
-														<p:inputText id="NOMUIN" value="#{GestorActivos.sNOMUIN}" size="30" maxlength="30">
+														<p:inputText id="NOMUIN" value="#{GestorListaActivos.sNOMUIN}" size="30" maxlength="30">
 														</p:inputText>
 													<p:message for="NOMUIN" display="icon"/>
 
 													<h:outputText for="COPOIN" value="Código Postal: " />
-														<p:inputText id="COPOIN" value="#{GestorActivos.sCOPOIN}" size="5" maxlength="5">
+														<p:inputText id="COPOIN" value="#{GestorListaActivos.sCOPOIN}" size="5" maxlength="5">
 														</p:inputText>
 													<p:message for="COPOIN" display="icon"/>
 
 													<h:outputText for="NOVIAS" value="Vía: " />
-														<p:inputText id="NOVIAS" value="#{GestorActivos.sNOVIAS}" size="60" maxlength="60">
+														<p:inputText id="NOVIAS" value="#{GestorListaActivos.sNOVIAS}" size="60" maxlength="60">
 														</p:inputText>
 													<p:message for="NOVIAS" display="icon"/>
 
 													<h:outputText for="NUPOAC" value="Portal/Punto Kilométrico: " />
-														<p:inputText id="NUPOAC" value="#{GestorActivos.sNUPOAC}" size="17" maxlength="17">
+														<p:inputText id="NUPOAC" value="#{GestorListaActivos.sNUPOAC}" size="17" maxlength="17">
 														</p:inputText>
 													<p:message for="NUPOAC" display="icon"/>
 
 													<h:outputText for="NUPIAC" value="Piso: " />
-														<p:inputText id="NUPIAC" value="#{GestorActivos.sNUPIAC}" size="11" maxlength="11">
+														<p:inputText id="NUPIAC" value="#{GestorListaActivos.sNUPIAC}" size="11" maxlength="11">
 														</p:inputText>
 													<p:message for="NUPIAC" display="icon"/>
 
 													<h:outputText for="NUPUAC" value="Puerta: " />
-														<p:inputText id="NUPUAC" value="#{GestorActivos.sNUPUAC}" size="17" maxlength="17">
+														<p:inputText id="NUPUAC" value="#{GestorListaActivos.sNUPUAC}" size="17" maxlength="17">
 														</p:inputText>
 													<p:message for="NUPUAC" display="icon"/>
 												</h:panelGrid>
@@ -115,22 +115,22 @@
 											<p:panel>
 												<h:panelGrid columns="3" cellpadding="5">
 													<h:outputText for="COACES" value="Número de Activo: "/>
-													<p:inputText id="COACES" value="#{GestorActivos.sCOACES}" size="9" maxlength="9"/>
+													<p:inputText id="COACES" value="#{GestorListaActivos.sCOACES}" size="9" maxlength="9"/>
 												</h:panelGrid>
 											</p:panel>
 										</h:panelGrid>
 									</p:fieldset>
 													<p:contextMenu for="activos">
-														<p:menuitem value="Detalles" update="form:popup" icon="ui-icon-folder-open" action="#{GestorActivos.cargarDetalles}"/>
-														<!--p:menuitem value="Comunidad" update="form:popup" icon="ui-icon-home" action="#{GestorActivos.cargarComunidad}"/>
-														<p:menuitem value="Cuotas" update="form:popup" icon="ui-icon-calculator" action="#{GestorActivos.cargarCuota}"/>
-														<p:menuitem value="Referencia Catastral" update="form:popup" icon="ui-icon-script" action="#{GestorActivos.cargarReferencia}"/>
-														<p:menuitem value="Impuestos y Recursos" update="form:popup" icon="ui-icon-note" action="#{GestorActivos.cargarImpuestos}"/>
-														<p:menuitem value="Gastos" update="form:popup" icon="ui-icon-cart" action="#{GestorActivos.cargarGastos}"/-->
+														<p:menuitem value="Detalles" update="form:popup" icon="ui-icon-folder-open" action="#{GestorListaActivos.cargarDetalles}"/>
+														<!--p:menuitem value="Comunidad" update="form:popup" icon="ui-icon-home" action="#{GestorListaActivos.cargarComunidad}"/>
+														<p:menuitem value="Cuotas" update="form:popup" icon="ui-icon-calculator" action="#{GestorListaActivos.cargarCuota}"/>
+														<p:menuitem value="Referencia Catastral" update="form:popup" icon="ui-icon-script" action="#{GestorListaActivos.cargarReferencia}"/>
+														<p:menuitem value="Impuestos y Recursos" update="form:popup" icon="ui-icon-note" action="#{GestorListaActivos.cargarImpuestos}"/>
+														<p:menuitem value="Gastos" update="form:popup" icon="ui-icon-cart" action="#{GestorListaActivos.cargarGastos}"/-->
 													</p:contextMenu>
 
-													<p:dataTable id="activos" var="activo" value="#{GestorActivos.tablaactivos}" rowKey="#{activo.COACES}"  
-															selection="#{GestorActivos.activoseleccionado}" selectionMode="single"
+													<p:dataTable id="activos" var="activo" value="#{GestorListaActivos.tablaactivos}" rowKey="#{activo.COACES}"  
+															selection="#{GestorListaActivos.activoseleccionado}" selectionMode="single"
 																paginator="true" paginatorPosition="bottom" rows="10" 
 																paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
 																rowsPerPageTemplate="5,10,15">  
