PPv09d-b20140117-r1 Modificaciones menores en funcionalidad y aspecto. Correccion de Bugs.

--- a/WebContent/detallesgasto.xhtml
+++ b/WebContent/detallesgasto.xhtml
@@ -13,7 +13,7 @@
 		<h:form>
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="auto" header="Gastos">
+				<p:layoutUnit position="north" size="auto" header="Detalles del Gastos">
 								<h:panelGrid columns="3" cellpadding="5">
 						<p:fieldset legend="Sesión" id="sesion">
 							<h:panelGrid columns="1" cellpadding="1">
