PPv09d-b20140128-r1 Implementación parcial: R1, R2, R3 y R4

--- a/WebContent/detallesactivo.xhtml
+++ b/WebContent/detallesactivo.xhtml
@@ -29,7 +29,7 @@
 						</p:fieldset>
 									<p:fieldset legend="Acciones">
 										<h:panelGrid columns="3" cellpadding="5">
-											<p:commandButton value="Volver" action="#{GestorDetallesActivo.volver}"/>
+											<p:commandButton value="Volver" actionListener="#{GestorDetallesActivo.volver}"/>
 										</h:panelGrid>
 											<p:messages id="msgs"/>
 									</p:fieldset>
